# livraria

./: pyproject.toml
config/: settings.py
livraria/: admin.py  models.py
