[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabriel nebraska", email = "abusentidoramaldavida@gmail.com"},
]
dependencies = [
    "django>=4.2.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
]
